@@ -1,6 +1,7 @@
 == 0.9.2 / ???
 
 * Add new aggregate functions: bool_and() and bool_or()
+* Fix a bug in processing multi-way joins defined inside modules
 * Fix two bugs in reduce() operator
   * Incorrect default value was sometimes returned
   * Didn't handle reduce() outputs that aren't tuples with two fields
